--- a/public/styles.css
+++ b/public/styles.css
@@ -6,7 +6,7 @@
 
 body {
   margin: 0;
-  background-color: #f7f1f1;
+  background-color: #24354e;
   font-family: 'Quicksand', sans-serif;
   font-size: 16px;
 }
@@ -21,9 +21,9 @@ h1 {
 .app {
   margin: 4rem auto;
   padding: 2rem 3rem;
-  max-width: 420px;
-  background-color: #ff6666;
-  color: #f7f1f1;
+  max-width: 720px;
+  background-color: #384b6b;
+  color: #cacaca;
 }
 
 .todo-list {
@@ -38,7 +38,18 @@ h1 {
   padding: 1.1rem 3rem;
   justify-content: space-between;
   align-items: center;
-  background: rgba(255,255,255,0.1);
+  background: rgba(255,255,255,0.05);
+}
+
+a {
+  color: #cacaca;
+  cursor: pointer;
+  text-decoration: none;
+  transition: color .2s ease-out;
+}
+
+a:hover {
+  color: #83a2cf;
 }
 
 form {
@@ -57,8 +68,8 @@ form input {
 
 form input[type="submit"] {
   padding:0 1.3rem;
-  color: #f7f1f1;
-  background: #ff6666;
+  color: #cacaca;
+  background: #2c4f84;
   text-transform: uppercase;
   border: 1px solid rgba(255,255,255,.3);
   margin-left: 5px;
@@ -67,7 +78,7 @@ form input[type="submit"] {
 }
 
 form input[type="submit"]:hover {
-  background: rgba(255,255,255,0.1);
+  background: #4b6da0;
 } 
 
 form input, 
